@@ -1,5 +1,9 @@
 2009-10-20  Sancho Lerena <slerena@artica.es>
 
+	* include/fgraph.php, 
+	include/functions_fsgraph.php: Solves a small problem with Flash graphs
+	when pandora fms console install dir is "/".
+
 	* include/functions_db.php: Fixed bug #2859919 (Transaction lock timeout).
 
 	* include/error*: Fixed a formatting error and added better error
